Adding cloning to Drawer (Name changed too)

--- a/src/openGLAbstractions/CMakeLists.txt
+++ b/src/openGLAbstractions/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(GenerateExportHeader)
 
-add_library(openGL-Renderer shader.cpp)
+add_library(openGL-Renderer shader.cpp error.cpp)
 
 add_library(OpenGL::openGL-Renderer ALIAS openGL-Renderer)
 
