--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,16 +17,6 @@ endif()
 
 include(${Catch2_SOURCE_DIR}/extras/Catch.cmake)
 
-# Provide a simple smoke test to make sure that the CLI works and can display a --help message
-add_test(NAME cli.has_help COMMAND intro --help)
-
-# Provide a test to verify that the version being reported from the application
-# matches the version given to CMake. This will be important once you package
-# your program. Real world shows that this is the kind of simple mistake that is easy
-# to make, but also easy to test for.
-add_test(NAME cli.version_matches COMMAND intro --version)
-set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${PROJECT_VERSION}")
-
 add_executable(tests tests.cpp)
 target_link_libraries(
   tests
@@ -36,6 +26,7 @@ target_link_libraries(
           OpenGL::openGL-Renderer
           OpenGL::GL
           glad::glad)
+add_test(NAME ErrorTests COMMAND tests)
 
 if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
